[package]
name = "msdfont-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.2"
image = "0.24.3"
cgmath = "0.16.1"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "cubic_benchmark"
harness = false