[package]
name = "msdfont-rs"
version = "0.1.0"
edition = "2021"
authors = ["Leon (Blatko1)"]
description = "Multi-channel signed distance field (MSDF) generator for fonts implemented in pure Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Blatko1/msdfont-rs"
keywords = ["text", "ttf", "truetype", "font", "msdf", "sdf"]
# categories = ["msdf", "font", "text"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.2"
image = "0.24.3"
owned_ttf_parser = "0.15.1"
hashbrown = "0.12.3"

[dev-dependencies]
criterion = "0.3.6"
image = "0.24.3"

[[bench]]
name = "cubic_benchmark"
harness = false