[package]
name = "msdfont"
version = "0.1.0"
edition = "2021"
authors = ["Leon (Blatko1)"]
description = "Multi-channel signed distance field (MSDF) generator for fonts implemented in pure Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Blatko1/msdfont"
keywords = ["text", "ttf", "truetype", "font", "msdf", "sdf"]
# categories = ["msdf", "font", "text"]

[dependencies]
# someday maybe switch to owned_ttf_parser = "0.15.1"
rusttype = "0.9.2"
hashbrown = "0.12.3"

[dev-dependencies]
criterion = "0.3.6"
image = "0.24.3"

[[bench]]
name = "cubic_benchmark"
harness = false

[[bench]]
name = "sdf_generator_benchmark"
harness = false